--- a/BuccalMedic/CapaPresentacion/CapaPresentacion.csproj
+++ b/BuccalMedic/CapaPresentacion/CapaPresentacion.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="form_cita.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="form_cita.Designer.cs">
+      <DependentUpon>form_cita.cs</DependentUpon>
+    </Compile>
     <Compile Include="form_login.cs">
       <SubType>Form</SubType>
     </Compile>
