--- a/BuccalMedic/CapaPresentacion/CapaPresentacion.csproj
+++ b/BuccalMedic/CapaPresentacion/CapaPresentacion.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="form_evaluaciones.cs">
+    <Compile Include="form_cirugias.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="form_evaluaciones.Designer.cs">
-      <DependentUpon>form_evaluaciones.cs</DependentUpon>
+    <Compile Include="form_cirugias.Designer.cs">
+      <DependentUpon>form_cirugias.cs</DependentUpon>
     </Compile>
     <Compile Include="form_login.cs">
       <SubType>Form</SubType>
@@ -60,8 +60,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="form_evaluaciones.resx">
-      <DependentUpon>form_evaluaciones.cs</DependentUpon>
+    <EmbeddedResource Include="form_cirugias.resx">
+      <DependentUpon>form_cirugias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="form_login.resx">
       <DependentUpon>form_login.cs</DependentUpon>
